--- a/koji/src/app/user-page/body/join-group/join-group.component.html
+++ b/koji/src/app/user-page/body/join-group/join-group.component.html
@@ -3,7 +3,7 @@
         <div class="join-group">
             <div class="h2 text-right header" dir="rtl">
                 <div>
-                    جستوجوی گروه
+                    جستجوی گروه
                 </div>
                 <button class="btn btn-back-container btn-dark text-white rounded-pill h6" (click)="back()">
                     <
@@ -26,7 +26,7 @@
                 </div>
                 <div class="mt-5 row">
                     <input placeholder="آدرس گروه" style="height: 40px;" class="p-3 col-xs-12" [(ngModel)]="groupLink">
-                    <button class="btn btn-success col-xs-12 mt-3" (click)="search()">جستوجو</button>
+                    <button class="btn btn-success col-xs-12 mt-3" (click)="search()">جستجو</button>
                 </div>
             </div>
         </div>
