--- a/koji/src/app/user-page/nav-bar/nav-bar.component.html
+++ b/koji/src/app/user-page/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
             <div class="options-container">
                 <button class="btn btn-dark row option-item mb-3" (click)="navigate('createEvent')">تنظیم قرار جدید</button>
                 <button class="btn btn-dark row option-item mb-3" (click)="navigate('profile')">نمایش پروفایل</button>
-                <button class="btn btn-dark row option-item mb-3" (click)="navigate('joinGroup')">جستوجوی گروه</button>
+                <button class="btn btn-dark row option-item mb-3" (click)="navigate('joinGroup')">جستجوی گروه</button>
                 <button class="btn btn-dark row option-item mb-3" (click)="navigate('createGroup')">ساختن گروه</button>
                 <button class="btn btn-dark row option-item mb-3" (click)="navigate('setting')">تنظیمات سایت</button>
             </div>
