--- a/koji/src/app/user-page/body/group-profile/group-profile.component.scss
+++ b/koji/src/app/user-page/body/group-profile/group-profile.component.scss
@@ -15,22 +15,70 @@
     background-color: rgba(255, 255, 255, 0.582);
     overflow: auto;
 }
+.user{
+    position: relative;
+    top: -8px;
+    width: 100%;
+    height: 100px;
+    border-bottom: 1px solid black;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+.user:hover{
+    background-color: rgba(169, 169, 169, 0.575);
+}
+.link{
+    position: relative;
+    top: -8px;
+    height: 50px;
+    border-bottom: 2px solid black;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+.link:hover{
+    background-color: rgba(169, 169, 169, 0.575);
+}
+
 .header{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 120px;
+    height: 150px;
+    border-bottom: 2px solid black;
+    overflow-x: auto;
 }
-.btn-back-container{
+.button-panle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    right: 3px;
+    position: absolute;
+}
+.button-panle button{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 50px;
     height: 50px;
-    position: absolute;
-    right: 5px;
-    top: 40px;
+    border-radius: 50px;
+    position: relative;
+}
+.owner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
 }
 
 
@@ -47,7 +95,12 @@
         background-color: rgba(207, 204, 204, 0.719);
         color: #000;
     }
-
+    .user,.link{  
+        border-bottom: 2px solid rgb(27, 27, 27);
+    }
+    .user:hover,.link:hover{
+        background-color: rgba(224, 224, 224, 0.925);
+    }
     .header{
         border-bottom: 2px solid rgb(20, 20, 20);
     }
@@ -63,6 +116,12 @@
         background-color: rgba(88, 88, 88, 0.719);
         color: #fff;
     }
+    .user,.link{  
+        border-bottom: 2px solid gray;
+    }
+    .user:hover,.link:hover{
+        background-color: rgba(88, 88, 88, 0.877);
+    }
     .header{
         border-bottom: 2px solid darkgray;
     }
@@ -76,6 +135,12 @@
     .group-profile{
         background-color: rgba(172, 166, 209, 0.719);
         color: #000;
+    }
+    .user,.link{  
+        border-bottom: 2px solid rgb(8, 8, 8);
+    }
+    .user:hover,.link:hover{
+        background-color: rgba(172, 166, 209, 0.918);
     }
     .header{
         border-bottom: 2px solid rgb(7, 7, 7);
