project will change for use apis

--- a/koji/src/app/about-us-page/about-us-page.component.html
+++ b/koji/src/app/about-us-page/about-us-page.component.html
@@ -6,7 +6,7 @@
       <span class="h3 m-4">کجی</span>
     </a>
     <div>
-      <button class="btn btn-info" style="margin-left: 1em;" (click)="navigate('user')" *ngIf="token">برو به اکانت خودم</button>  
+      <button class="btn btn-info" style="margin-left: 1em;" (click)="navigate('user')" *ngIf="token">اکانت شما</button>  
       <button class="btn btn-info" (click)="navigate('login')">ورود</button>
     </div>
   </div>
@@ -53,7 +53,7 @@
       <div class="container text-center pt-5">
         <img src="../../assets/developers.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
         <div class="pb-5">
-          <strong class="h2 text-dark">متخصصین تیم کجی آماده هستند تا این پروژه رو در سطح های بالاتر گسترش بدن</strong>
+          <strong class="h2 text-dark">تیم کجی آمادگی داره که این پروژه رو گسترش بده و مشکلاتش رو حل کنه</strong>
         </div>
       </div>
     </div>
