--- a/koji/src/app/user-page/nav-bar/nav-bar.component.scss
+++ b/koji/src/app/user-page/nav-bar/nav-bar.component.scss
@@ -53,9 +53,9 @@
     .image-container{
         border-bottom: 2px solid yellow;
     }
-    .option-item{
+    // .option-item{
 
-    }
+    // }
 }
 .light{
     .nav-bar{
