--- a/koji/src/app/user-page/body/group-profile/group-profile.component.scss
+++ b/koji/src/app/user-page/body/group-profile/group-profile.component.scss
@@ -31,10 +31,10 @@
 .user:hover{
     background-color: rgba(169, 169, 169, 0.575);
 }
-.link{
+.link,.bio{
     position: relative;
     top: -8px;
-    height: 50px;
+    height: 75px;
     border-bottom: 2px solid black;
     text-align: center;
     display: flex;
@@ -43,7 +43,10 @@
     overflow-x: auto;
     overflow-y: hidden;
 }
-.link:hover{
+.bio{
+    height: 75px;
+}
+.link:hover,.bio:hover{
     background-color: rgba(169, 169, 169, 0.575);
 }
 
@@ -52,9 +55,12 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 150px;
+    height: 100px;
     border-bottom: 2px solid black;
-    overflow-x: auto;
+    .detail{
+        width: 50%;
+        overflow-x: auto;
+    }
 }
 .button-panle{
     display: flex;
@@ -95,14 +101,14 @@
         background-color: rgba(207, 204, 204, 0.719);
         color: #000;
     }
-    .user,.link{  
+    .user,.link,.bio{  
         border-bottom: 2px solid rgb(27, 27, 27);
     }
-    .user:hover,.link:hover{
+    .user:hover,.link:hover,.bio:hover{
         background-color: rgba(224, 224, 224, 0.925);
     }
     .header{
-        border-bottom: 2px solid rgb(20, 20, 20);
+        border-bottom: 1px solid rgb(20, 20, 20);
     }
 }
 .derakula{
@@ -116,10 +122,10 @@
         background-color: rgba(88, 88, 88, 0.719);
         color: #fff;
     }
-    .user,.link{  
+    .user,.link,.bio{  
         border-bottom: 2px solid gray;
     }
-    .user:hover,.link:hover{
+    .user:hover,.link:hover,.bio:hover{
         background-color: rgba(88, 88, 88, 0.877);
     }
     .header{
@@ -136,10 +142,10 @@
         background-color: rgba(172, 166, 209, 0.719);
         color: #000;
     }
-    .user,.link{  
+    .user,.link,.bio{  
         border-bottom: 2px solid rgb(8, 8, 8);
     }
-    .user:hover,.link:hover{
+    .user:hover,.link:hover,.bio:hover{
         background-color: rgba(172, 166, 209, 0.918);
     }
     .header{
