--- a/koji/src/app/user-page/body/user-home/user-home.component.html
+++ b/koji/src/app/user-page/body/user-home/user-home.component.html
@@ -12,6 +12,13 @@
             >
                 <span class="h4">نام گروه: </span><span class="h5 p-3">{{group.name}}</span>
             </div>
+            <div 
+                dir="rtl"
+                *ngIf="true"
+                >
+                <p class="h4 p-4">شما در گروهی عضو نیستید. </p>
+                <p><a (click)="navigate('user/createGroup')" class="h6 p-4">ساختن گروه</a><a (click)="navigate('user/joinGroup')" class="h6">جستجوی گروه ها</a></p>
+            </div>
         </div>
     </div>
 </div>
