--- a/koji/src/app/user-page/body/event-setting/event-setting.component.html
+++ b/koji/src/app/user-page/body/event-setting/event-setting.component.html
@@ -6,6 +6,9 @@
                     <
                 </button>
             </div>
+            <div class="body">
+
+            </div>
         </div>
     </div>    
 </div>
