--- a/koji/src/app/user-page/body/profile/profile.component.html
+++ b/koji/src/app/user-page/body/profile/profile.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="body text-center h4 pt-4" dir="rtl">
                 
-                <p>نام: <span>{{userData.name}}</span></p>
+                <p>نام: <span>{{userData.firstName}}</span></p>
                 <p>ایمیل: <span>{{userData.email}}</span></p>
                 
                 <button class="btn btn-info m-3 row" style="width: 200px;" (click)="updateAcc()" id="updateAcc">بروز رسانی پروفایل</button><br>
