--- a/koji/src/app/user-page/nav-bar/nav-bar.component.html
+++ b/koji/src/app/user-page/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
                 <div 
                     *ngIf="userPageInformation.selectedGroup===undefined"    
                     class="text-center h4 name-container">
-                    {{userData.name}}
+                    {{userInformation.userData.firstName}}
                 </div>
             </div>
             <div class="options-container">
