--- a/koji/src/app/about-us-page/about-us-page.component.html
+++ b/koji/src/app/about-us-page/about-us-page.component.html
@@ -16,11 +16,11 @@
   <div class="row text-white" dir="rtl">
     <div class="col-lg-8">
       <div class="pt-5" dir="rtl">
-        <h1 class="display-3 h1 p-3 text-dark"> با کُجی قرار گذاشتن خیلییییی راحته . . .</h1>
+        <h1 class="display-3 h1 p-3 text-dark"> با کُجی قرار گذاشتن خیلیییی راحته . . .</h1>
         <div class="line m-3"></div>
         <ul class="">
-          <li class="h4 p-4">کجی به شما این امکان رو میده که به سادگی قرار هاتون رو مدیریت کنید.</li>
-          <li class="h4 p-4">شما تنها نیاز دارید که تو کجی <strong (click)="navigate('login')" class="text-dark h2">عضو شوید</strong> تا از خدمات این سایت به صورت رایگان بهره ببرید.</li>
+          <li class="h4 p-4">سایت کجی به شما این امکان رو میده که قرار هاتون رو به صورت گروهی مدیریت کنید.</li>
+          <li class="h4 p-4">شما تنها نیاز دارید که تو کجی <strong (click)="navigate('login')" class="text-dark h2">عضو شوید.</strong></li>
         </ul>
       </div>
     </div>
@@ -45,7 +45,7 @@
       <div class="container text-center pt-5">
         <img src="../../assets/solutions.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
         <div class="pb-5">
-          <strong class="h2 text-dark">استفاده از ایده ها و نظرات شما در پروژه کجی</strong>
+          <strong class="h2 text-dark">هماهنگی و برنامه ریزی راحت قرارها با سایت کجی</strong>
         </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
       <div class="container text-center pt-5">
         <img src="../../assets/developers.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
         <div class="pb-5">
-          <strong class="h2 text-dark">تیم کجی آمادگی داره که این پروژه رو گسترش بده و مشکلاتش رو حل کنه</strong>
+          <strong class="h2 text-dark">استفاده از بروز ترین تکنولوژی ها در پروژه کجی</strong>
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
       <div class="container text-center pt-5">
         <img src="../../assets/technology.png" alt="Image" style="width:200px; height: 200px;" class="text-white h3 rounded-pill">
         <div class="pb-5">
-          <strong class="h2 text-dark">استفاده از بروز ترین تکنولوژی ها در پروژه کجی</strong>
+          <strong class="h2 text-dark">دسترسی راحت و سادگی استفاده از سایت کجی</strong>
         </div>
       </div>
     </div>
