--- a/koji/src/app/login-page/login-page.component.html
+++ b/koji/src/app/login-page/login-page.component.html
@@ -4,12 +4,12 @@
             <form [formGroup]="signInForm" (ngSubmit)="signIn()">
                 <h1 dir="rtl">ورود</h1>
                 <div>
-                    <input class="text-center" type="email" placeholder="ایمیل" name="emailI" id="emailI" [formControl]="emailI">
-                    <span [hidden]="emailI.valid || emailI.untouched" class="error" dir="rtl">  
-                        <div [hidden]="!emailI.hasError('email')">  
-                            ایمیل معتبر نمی باشد.
+                    <input class="text-center" type="text" placeholder="نام کاربری" name="usernameI" id="usernameI" [formControl]="usernameI">
+                    <span [hidden]="usernameI.valid || usernameI.untouched" class="error" dir="rtl">  
+                        <div [hidden]="!usernameI.hasError('minlength')">  
+                            نام کاربری نمیتواند کمتر از چهار حرف باشد.
                         </div>
-                        <div [hidden]="!emailI.hasError('required')">  
+                        <div [hidden]="!usernameI.hasError('required')">  
                             این فیلد ضروری است.
                         </div>  
                     </span>  
@@ -18,7 +18,7 @@
                     <input class="text-center" type="password" placeholder="پسوورد" name="passwordI" id="passwordI" [formControl]="passwordI">  
                     <span [hidden]="passwordI.valid || passwordI.untouched" class="error" dir="rtl">  
                         <div [hidden]="!passwordI.hasError('minlength')">  
-                            پسوورد نمیتواند کمتر از چهار حرف باشد.
+                            پسوورد نمیتواند کمتر از شش حرف باشد.
                         </div>  
                         <div [hidden]="!passwordI.hasError('required')">  
                             این فیلد ضروری است.
@@ -36,23 +36,45 @@
             <form [formGroup]="signUpForm" (ngSubmit)="signUp()">
                 <h1  dir="rtl">ثبت نام</h1>
                 <div>
-                    <input class="text-center" type="text" placeholder="نام" name="nameU" id="nameU" [formControl]="nameU">  
-                    <span [hidden]="nameU.valid || nameU.untouched" class="error"  dir="rtl">  
-                        <div [hidden]="!nameU.hasError('minlength')">
-                            نام شما نمیتواند کمتر از سه حرف باشد.  
+                    <input class="text-center" type="text" placeholder="نام" name="firstName" id="firstName" [formControl]="firstName">  
+                    <span [hidden]="firstName.valid || firstName.untouched" class="error"  dir="rtl">  
+                        <div [hidden]="!firstName.hasError('minlength')">
+                            این فیلد نمیتواند کمتر از سه حرف باشد.  
                         </div>  
-                        <div [hidden]="!nameU.hasError('required')">  
+                        <div [hidden]="!firstName.hasError('required')">  
                             این فیلد ضروری است.
                         </div>  
                     </span>  
                 </div>
                 <div>
-                    <input class="text-center" type="email" placeholder="ایمیل" name="emailU" id="emailU" [formControl]="emailU">  
-                    <span [hidden]="emailU.valid || emailU.untouched" class="error" dir="rtl">  
-                        <div [hidden]="!emailU.hasError('email')">  
+                    <input class="text-center" type="text" placeholder="نام خانوادگی" name="lastName" id="lastName" [formControl]="lastName">  
+                    <span [hidden]="lastName.valid || lastName.untouched" class="error"  dir="rtl">  
+                        <div [hidden]="!lastName.hasError('minlength')">
+                            این فیلد نمیتواند کمتر از سه حرف باشد.  
+                        </div>  
+                        <div [hidden]="!lastName.hasError('required')">  
+                            این فیلد ضروری است.
+                        </div>  
+                    </span>  
+                </div>
+                <div>
+                    <input class="text-center" type="email" placeholder="ایمیل" name="email" id="email" [formControl]="email">  
+                    <span [hidden]="email.valid || email.untouched" class="error" dir="rtl">  
+                        <div [hidden]="!email.hasError('email')">  
                             ایمیل معتبر نمی باشد.
                         </div>
-                        <div [hidden]="!emailU.hasError('required')">  
+                        <div [hidden]="!email.hasError('required')">  
+                            این فیلد ضروری است.
+                        </div>  
+                    </span>  
+                </div>
+                <div>
+                    <input class="text-center" type="text" placeholder="نام کاربری" name="usernameU" id="usernameU" [formControl]="usernameU">  
+                    <span [hidden]="usernameU.valid || usernameU.untouched" class="error" dir="rtl">  
+                        <div [hidden]="!usernameU.hasError('minlength')">  
+                            نام کاربری نمیتواند کمتر از چهار حرف باشد.
+                        </div>
+                        <div [hidden]="!usernameU.hasError('required')">  
                             این فیلد ضروری است.
                         </div>  
                     </span>  
@@ -61,7 +83,7 @@
                     <input class="text-center" type="password" placeholder="پسورد" name="passwordU" id="passwordU" [formControl]="passwordU">  
                     <span [hidden]="passwordU.valid || passwordU.untouched" class="error" dir="rtl">  
                         <div [hidden]="!passwordU.hasError('minlength')">  
-                            پسورد نمیتواند کمتر از چهار حرف باشد.
+                            پسورد نمیتواند کمتر از شش حرف باشد.
                         </div>  
                         <div [hidden]="!passwordU.hasError('required')">  
                             این فیلد ضروری است.
