--- a/koji/src/app/user-page/body/create-event/create-event.component.html
+++ b/koji/src/app/user-page/body/create-event/create-event.component.html
@@ -10,31 +10,45 @@
                 </button>
             </div>
             <div class="body">
-                <form class="mt-4 mb-4" [formGroup]="createEventForm" (ngSubmit)="create()">
+                <form class="mt-4 mb-4" [formGroup]="createEventForm">
                     <div>
                         <label for="place" class="h5">یک عنوان برای قرار بنویسید</label><br>
                         <input class="text-center" type="text" placeholder="عنوان قرار" name="eventTitle" id="eventTitle" [formControl]="eventTitle">  
-                        <span [hidden]="true" class="error"  dir="rtl">  
-                            <div [hidden]="true">  
-                                نام شما نمیتواند کمتر از سه حرف باشد.  
-                            </div>  
-                            <div [hidden]="true">  
-                                نام را وارد کنید
-                            </div>  
-                        </span>  
+                        <span [hidden]="eventTitle.valid || eventTitle.untouched" class="error" dir="rtl">
+                            <div [hidden]="!eventTitle.hasError('required')">  
+                                این فیلد ضروری است.
+                            </div>
+                            <div [hidden]="!eventTitle.hasError('maxlength')">  
+                                توضیحات نمیتواند بیشتر از سی حرف باشد.
+                            </div>
+                            <br>
+                        </span>
                     </div>
                     <div class="m-4" style="position: relative; width: 100%; border-bottom: 2px solid black;"></div>
                     <div dir="rtl">
-                        <label for="place" class="h5">توضیحاتی راجب قرار بنویسید</label><br>
-                        <textarea rows="4" cols="19" class="text-center" type="text" placeholder="توضیحات قرار" name="eventDescriptions" id="eventDescriptions" [formControl]="eventDescriptions"></textarea>
-                        <span [hidden]="true" class="error"  dir="rtl">  
-                            <div [hidden]="true">  
-                                نام شما نمیتواند کمتر از سه حرف باشد.  
-                            </div>  
-                            <div [hidden]="true">  
-                                نام را وارد کنید
-                            </div>  
+                        <label for="place" class="h5">توضیحاتی راجب قرار بنویسید (اختیاری)</label><br>
+                        <textarea class="text-center" type="text" placeholder="توضیحات قرار" name="eventDescriptions" id="eventDescriptions" [formControl]="eventDescriptions"></textarea>
+                        <span [hidden]="eventDescriptions.valid || eventDescriptions.untouched" class="error"  dir="rtl">  
+                            <div [hidden]="!eventDescriptions.hasError('maxlength')">  
+                                توضیحات نمیتواند بیشتر از پنجاه حرف باشد.
+                            </div>
+                            <br>
                         </span>  
+                    </div>
+                    <div class="m-4" style="position: relative; width: 100%; border-bottom: 2px solid black;"></div>
+                     <div class="mt-5" dir="rtl">
+                        <label for="date" class="h5">گروه هایی که میخواهید قرار را نمایش دهند انتخاب کنید</label><br><br>
+                        <ng-multiselect-dropdown class="" dir="ltr"
+                                [placeholder]="'groupName'"
+                                [settings]="groupSettings"
+                                [data]="groupList"
+                                [(ngModel)]="selectedGroups"
+                                (onSelect)="onGroupSelect($event)"
+                                (onSelectAll)="onSelectAll($event)"
+                                >
+                        </ng-multiselect-dropdown>
+
+                        <br><br>
                     </div>
                     <div class="m-4" style="position: relative; width: 100%; border-bottom: 2px solid black;"></div>
                     <div class="mt-3" dir="rtl">
@@ -43,7 +57,7 @@
                             style="width: 70%; height: 40px;" 
                             type="text" placeholder="نام مکان" 
                             name="place" id="place"
-                            [formControl]="placeInput"
+                            [formControl]="placeInput"                            
                             >
                         <button class="btn btn-danger m-3" (click)="addPlace()">افزودن</button>
                         <br><br>
@@ -57,17 +71,19 @@
     
                     <div class="mt-5" dir="rtl">
                         <label for="date" class="h5">تاریخ های مورد نظر برای قرار را اضافه کنید</label><br>
+                        <select class="btn btn-warning m-4" name="timeType" id="timeType" [formControl]="timeType">
+                            <option value="text">متن</option>
+                            <option value="datetime-local">تاریخ</option>
+                        </select>
                         <input 
-                             style="width: 70%; height: 40px;" 
+                             style="width: 60%; height: 40px;" 
                              [type]="timeType.value" 
                              name="date" id="date"
                              dir="ltr"
                              class="text-center"
-                             [formControl]="dateInput">
-                             <select class="btn btn-warning m-4" name="timeType" id="timeType" [formControl]="timeType">
-                                <option value="text">متن</option>
-                                <option value="datetime-local">تاریخ</option>
-                              </select>
+                             [formControl]="dateInput"
+                             placeholder="زمان">
+
                         <button class="btn btn-danger m-3" (click)="addDate()">افزودن</button>
                         <br><br>
                     </div>
@@ -78,11 +94,13 @@
                         </div>
                     </div>
     
-                    <button dir="rtl" type="submit" [disabled]="false" class="submit btn-form btn-success mb-3">ساختن</button>  
+                    <button dir="rtl" (click)="create()" [disabled]=" groupIds.length==0" class="submit btn-form btn-success mb-3">ساختن</button>  
+                    <div class="request_status" dir="rtl">
+                        <div *ngIf="isLoading">لطفا منتظر بمانید ...</div>
+                        <div class="text-success" *ngIf="createSuccess">قرار با موفقیت ساخته شد.</div>
+                        <div class="text-danger" *ngIf="createError">مشکلی در ساختن قرار پیش آمده است.</div>
+                    </div>
                 </form>
-                <div class="group-link">
-    
-                </div>
             </div>
         </div>
     </div>    
