--- a/koji/src/app/user-page/body/event-setting/event-setting.component.scss
+++ b/koji/src/app/user-page/body/event-setting/event-setting.component.scss
@@ -21,6 +21,7 @@
     align-items: center;
     width: 100%;
     height: 120px;
+    border-bottom: 2px solid black;
 }
 .btn-back-container{
     display: flex;
