--- a/koji/src/app/user-page/body/group-profile/group-profile.component.scss
+++ b/koji/src/app/user-page/body/group-profile/group-profile.component.scss
@@ -35,7 +35,7 @@
     position: relative;
     top: -8px;
     height: 75px;
-    border-bottom: 2px solid black;
+    // border-bottom: 2px solid black;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -46,17 +46,17 @@
 .bio{
     height: 75px;
 }
-.link:hover,.bio:hover{
-    background-color: rgba(169, 169, 169, 0.575);
-}
+// .link:hover,.bio:hover{
+//     background-color: rgba(169, 169, 169, 0.575);
+// }
 
 .header{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100px;
-    border-bottom: 2px solid black;
+    height: 80px;
+    // border-bottom: 2px solid black;
     .detail{
         width: 50%;
         overflow-x: auto;
